// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPageMainContent /> should render correctly 1`] = `
<ProposalPageMainContent__ProposalPageMainContentContainer
  id="ProposalPageMainContent"
  usingTipsmeee={false}
>
  <Relay(ProposalPageFusionInformations)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(ProposalPageOfficialAnswer)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(ProposalPageDescription)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(Connect(ProposalPageLocalisation))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(Connect(ProposalPageCustomSections))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(Connect(ProposalPageMainAside))
    display={false}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(ProposalPageNews)
    goToBlog={[MockFunction]}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(ProposalPageDiscussions)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
</ProposalPageMainContent__ProposalPageMainContentContainer>
`;

exports[`<ProposalPageMainContent /> should render correctly whith analysis 1`] = `
<ProposalPageMainContent__ProposalPageMainContentContainer
  id="ProposalPageMainContent"
  usingTipsmeee={false}
>
  <Relay(ProposalPageFusionInformations)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(ProposalPageOfficialAnswer)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(ProposalPageDescription)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(Connect(ProposalPageLocalisation))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(Connect(ProposalPageCustomSections))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(Connect(ProposalPageMainAside))
    display={true}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(ProposalPageNews)
    goToBlog={[MockFunction]}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
  <Relay(ProposalPageDiscussions)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": null,
      }
    }
  />
</ProposalPageMainContent__ProposalPageMainContentContainer>
`;

exports[`<ProposalPageMainContent /> should render correctly with tipsmeeee 1`] = `
<ProposalPageMainContent__ProposalPageMainContentContainer
  id="ProposalPageMainContent"
  usingTipsmeee="anId"
>
  <Relay(ProposalPageFusionInformations)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": "anId",
      }
    }
  />
  <Relay(ProposalPageOfficialAnswer)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": "anId",
      }
    }
  />
  <ProposalPageMainContent__DonatorContent>
    <ProposalTipsMeeeDonatorsAside
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "tipsmeeeId": "anId",
        }
      }
    />
  </ProposalPageMainContent__DonatorContent>
  <Relay(ProposalPageDescription)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": "anId",
      }
    }
  />
  <Relay(Connect(ProposalPageLocalisation))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": "anId",
      }
    }
  />
  <ProposalPageTopDonators
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": "anId",
      }
    }
  />
  <Relay(Connect(ProposalPageCustomSections))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": "anId",
      }
    }
  />
  <Relay(Connect(ProposalPageMainAside))
    display={false}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": "anId",
      }
    }
  />
  <Relay(ProposalPageNews)
    goToBlog={[MockFunction]}
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": "anId",
      }
    }
  />
  <Relay(ProposalPageDiscussions)
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "tipsmeeeId": "anId",
      }
    }
  />
</ProposalPageMainContent__ProposalPageMainContentContainer>
`;
